@@ -4,7 +4,7 @@ buildscript {
       mavenLocal()
    }
    dependencies {
-      classpath "us.ihmc:ihmc-build:0.11.2"
+      classpath "us.ihmc:ihmc-build:0.12.2"
    }
 }
 apply plugin: "us.ihmc.ihmc-build"
@@ -16,6 +16,10 @@ ihmc {
    configurePublications()
 }
 
+// compileJava {
+//    options.compilerArgs += ["--add-modules", "java.xml.bind"]
+// }
+
 testSuites {
    def prefix = "LIBS-IHMCOPENROBOTICSSOFTWARE"
    bambooPlanKeys = [prefix + "FAST", prefix + "INDEVELOPMENT", prefix + "UI", prefix + "VIDEO"]
@@ -24,7 +28,7 @@ testSuites {
 mainDependencies {
    compile group: 'us.ihmc', name: 'euclid-core', version: '0.4.13'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
-   compile group: "us.ihmc", name: "ihmc-commons", version: "0.17.0"
+   compile group: "us.ihmc", name: "ihmc-commons", version: "0.17.1"
    compile group: "us.ihmc", name: "ihmc-robot-description", version: groupDependencyVersion
    compile group: "us.ihmc", name: "ihmc-graphics-description", version: groupDependencyVersion
    compile group: "us.ihmc", name: "ihmc-robotics-toolkit", version: groupDependencyVersion
@@ -33,9 +37,9 @@ mainDependencies {
 }
 
 testDependencies {
-   compile group: "us.ihmc", name: "ihmc-ci-core-api", version: "0.17.0"
+   compile group: "us.ihmc", name: "ihmc-ci-core-api", version: "0.17.1"
    compile group: "junit", name: "junit", version: "4.12"
-   compile group: "us.ihmc", name: "ihmc-commons-testing", version: "0.17.0"
+   compile group: "us.ihmc", name: "ihmc-commons-testing", version: "0.17.1"
    compile group: "us.ihmc", name: "ihmc-robotics-toolkit-test", version: groupDependencyVersion
    compile group: "us.ihmc", name: "simulation-construction-set-test", version: groupDependencyVersion
 }
